img lazy loader

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-5 px-5">
-                        <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
+                        <img data-src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
                     </div>
                     <div class="order-2 order-lg-2 col-lg-3 align-items-center my-auto">
                         <div class="py-1 py-lg-4">
@@ -222,13 +222,13 @@
                 <div class="my-5 pt-0 pt-lg-5">
                     <p class="pt-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
                 </div>
-                <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
+                <img data-src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
                 
                 <!-- Heuristic eval -->
                 <div class="mt-5 pt-0 pt-lg-5">
                     <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
                 </div>
-                <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
+                <img data-src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
             </div>
         </section>
 
@@ -256,7 +256,7 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-5 px-md-0 mt-3 mt-md-0">
-                            <img src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="" class="img-fluid shadow">
+                            <img data-src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="" class="img-fluid shadow">
                         </div>
                     </div>
 
@@ -269,7 +269,7 @@
                             <p>Using our research, we were able to identify the main problems in navigation and what our users expect while on the site. With the current design, most users feel overwhelmed by the sheer amount of information. After identifying our issues, we completed a <b>feature prioritization matrix</b>, grouping features into 4 categories of <b>Must Have, Could Have, Should Have,</b> and <b>Won&apos;t Have.</b></p>
                         </div>
                         <div class="col-md-5 opacity-75">
-                            <img src="../assets/img/UX_TD/undraw_visionary_technology_re_jfp7.svg" alt="" class="img-fluid imgSVG">
+                            <img data-src="../assets/img/UX_TD/undraw_visionary_technology_re_jfp7.svg" alt="" class="img-fluid imgSVG">
                         </div>
                     </div>
 
@@ -277,7 +277,7 @@
                     <div class="col-lg-9 pt-5">
                         <p>We also conducted <b>Card Sorting</b> activity with users to identify like-groups of content for users to navigate through.</p>
                     </div>
-                    <img src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
+                    <img data-src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -293,13 +293,13 @@
                         <p>Using our card sorting results, we redesigned the new <b>sitemap navigation</b>. To simplify the homepage, we moved links to specific pages to the footer.</p>
                     </div>
                     <div class="pb-5 mb-5">
-                        <img src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
+                        <img data-src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
                     </div>
                     <div class="py-5">
                         <p>We were able to create a new navigation header and footer using the updated sitemap. Creating a moodboard in Invision led us to identify common color palettes used for a government site and helped us determine how to approach our new design. We created a <b>U.I. style tile</b> with our ideas of a color palette, gradients, typography, iconography, and button styles and states.</p>
                     </div>
                     <div class="pb-5 mb-5 shadow">
-                        <img src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="" class="img-fluid">
+                        <img data-src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="" class="img-fluid">
                     </div>
                     
                 </div>
@@ -321,7 +321,7 @@
                         </p>
                     </div>
                     <div class="pb-5 mb-5">
-                        <img src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="" class="img-fluid">
+                        <img data-src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="" class="img-fluid">
                     </div>
 
                     <!-- 5 second user test -->
@@ -341,7 +341,7 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-3 opacity-75">
-                            <img src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="" class="img-fluid imgSVG">
+                            <img data-src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="" class="img-fluid imgSVG">
                         </div>
                         <p class="mt-3 pt-lg-5"><b>Revisions based on test feedbacks:</b></p>
                         <div class="d-flex row">
