--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -197,7 +197,7 @@
                             <li>Resources needed</li>
                         </ol>
                     </div>
-                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
+                    <img data-src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
                 </div>
             </div>
         </section>
@@ -213,7 +213,7 @@
                         Using our research we were able to identify the main problems that teachers face.
                     </h6>
                     <div class="d-flex">
-                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
+                        <img data-src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
                         <div class="col-md-7 align-self-center ms-0 ms-md-5">
                             <p class="">
                                 As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
@@ -223,7 +223,7 @@
                             </br>
                         </div>
                     </div>
-                    <img src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5">
+                    <img data-src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5">
                 </div>
             </div>
         </section>
@@ -251,7 +251,7 @@
                             </p>
                         </div>
 
-                        <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
+                        <img data-src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -269,9 +269,9 @@
                             We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
                         </div>
                         <div class="row justify-content-center">
-                            <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-3">
-                            <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-3">
-                            <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-3">
+                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-3">
+                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-3">
+                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-3">
                         </div>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
                             With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
                         </p>
                     </div>
-                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
+                    <img data-src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
                 </div>
             </div>
         </section>
@@ -333,7 +333,7 @@
                         Final Prototype
                     </h6>
                     <div class="row col-md-10 mx-auto">
-                        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
+                        <iframe data-src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
