--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -122,7 +122,7 @@
         <section class="" style="margin: 9.375rem 0;">
             <div class="container px-4 px-lg-5">
                 <!-- Overview -->
-                <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
+                <div class="UXCaseTeam gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
                         <h5>Role</h5>
                         <p>
@@ -149,7 +149,7 @@
                 </div>
 
                 <!-- Title -->
-                <div class="UXCaseNav row gx-0 mb-5">
+                <div class="UXCaseNav gx-0 mb-5">
                     <a class="hvr-sweep" href="#CW_Research">Research</a>
                     <a class="hvr-sweep" href="#CW_Definition">Definition</a>
                     <a class="hvr-sweep" href="#CW_Ideation">Ideation</a>
@@ -203,7 +203,7 @@
         <!-- Definition ##################-->
         <section id="CW_Definition">
             <div class="container px-4 px-lg-5 d-flex">
-                <div class="row col-lg-10 mx-auto">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Definition
                     </h6>
@@ -215,12 +215,12 @@
                     <div class="col-lg-9 mx-auto">
                             Consisting of the reasons our customers would buy our product, what kind of description they prefer them to have, and if they would just buy them once or prefer a monthly subscription. This data collected allowed us to analyze how to set up or site even more. 
                     </div>
-                    <div class="py-5">
+                    <div class="pt-3 pt-lg-5 pb-5">
                         <img data-src="../assets/img/UX_CW/UX_CW_Affinity.png" alt="" class="img-fluid">
                     </div>
 
                     <!-- Empathy Map -->
-                    <div class="d-block d-md-flex my-5 gap-4 pt-lg-5">
+                    <div class="d-block d-md-flex mt-5 mb-3 mb-lg-5 gap-4 pt-lg-5">
                         <h6 class="playFair shortH6">
                             Empathy Map
                         </h6>
@@ -228,18 +228,18 @@
                             allowed us to evaluate what our customers might do, say, think or feel about our website and product. Under the “feel” section, we were able to see the Pains and Gains of our possible future customers.
                         </div>
                     </div>
-                    <div class="py-5">
+                    <div class="pt-3 pt-lg-5 pb-5">
                         <img data-src="../assets/img/UX_CW/UX_CW_EmpathyMap.svg" alt="" class="img-fluid">
                     </div>
 
                     <!-- User Persona -->
-                    <h6 class="playFair my-5 pt-lg-5">
+                    <h6 class="playFair mt-5 mb-3 mb-lg-5 pt-lg-5">
                         After gaining sufficient insights, we compiled our User Persona.
                     </h6>
                     <div class="col-lg-9 mx-auto">
                         Candles are a unique item that everyone pretty much loves and buys. We wanted a user persona that fits right in the middle demographic of a candle buyer. John Doe is a single, 27 male that works at Starbucks. He buys candles for personal use when he wants his place to smell good but sometimes as he buys them as gifts. He typically buys them at retail stores while shopping for other items. 
                     </div>
-                    <div class="py-5">
+                    <div class="pt-3 pt-lg-5 pb-5">
                         <img data-src="../assets/img/UX_CW/UX_CW_UserPersona.png" alt="" class="img-fluid">
                     </div>
 
@@ -298,7 +298,7 @@
                             <p>We posited that the process of perusing and purchasing candles is largely a positive experience, although the usage of the candle is most likely the best part. Our goal with Chasewick was to try and make a shopping experience that is equally pleasant.</p>
                         </div>
                     </div>
-                    <img data-src="../assets/img/UX_CW/UX_CW_UserJourneyMap.png" alt="" class="img-fluid py-5 mb-5">
+                    <img data-src="../assets/img/UX_CW/UX_CW_UserJourneyMap.png" alt="" class="img-fluid pt-3 pt-lg-5 pb-5 mb-5">
     
                     <!-- Site Map -->
                     <div class="d-block d-md-flex mt-5 gap-4 pt-lg-5">
@@ -447,16 +447,16 @@
                     <h6 class="leadingLine text-nav text-muted my-5">
                         Final Prototype
                     </h6>
-                    <div class="row">
-                        <h6>Follow along with these tasks</h6>
-                        <ol>
-                            <li>Explore the Home Page</li>
-                            <li>Navigate to the "Shop by Scent" page</li>
-                            <li>Browse detail description of Brown Candle</li>
-                            <li>Buy one Brown Candle and proceed to checkout</li>
-                        </ol>
-                        <p class="fw-bold py-4">click on the QR to check out the Final Product, or you can scan with your phone to check out the Mobile version</p>
-                        <a href="https://kaider.github.io/ChaseWick/" target="_blank" class="col-8 col-sm-4 mx-auto">
+                    <h6>Follow along with these tasks</h6>
+                    <ol>
+                        <li>Explore the Home Page</li>
+                        <li>Navigate to the "Shop by Scent" page</li>
+                        <li>Browse detail description of Brown Candle</li>
+                        <li>Buy one Brown Candle and proceed to checkout</li>
+                    </ol>
+                    <p class="fw-bold py-4">click on the QR to check out the Final Product, or you can scan with your phone to check out the Mobile version</p>
+                    <div class="col-8 col-sm-4 mx-auto">
+                        <a href="https://kaider.github.io/ChaseWick/" target="_blank" class="">
                             <img data-src="../assets/img/UX_CW/UX_CW_FinalQR.png" alt="" class="img-fluid">
                         </a>
                     </div>
