--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -124,7 +124,7 @@
         </div>
         <section class="" style="margin: 9.375rem 0;">
             <div class="container px-4 px-lg-5">
-                <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
+                <div class="UXCaseTeam gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
                         <h5>Role</h5>
                         <p>Designer <br>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="UXCaseNav row gx-0 mb-5">
+                <div class="UXCaseNav gx-0 mb-5">
                     <a class="hvr-sweep" href="#TD_Research">Research</a>
                     <a class="hvr-sweep" href="#TD_Analysis">Analysis</a>
                     <a class="hvr-sweep" href="#TD_Ideation">Ideation</a>
@@ -264,7 +264,7 @@
                     <h6 class="playFair mb-5 pt-5">
                         We conducted usablity tests regarding navigation.
                     </h6>
-                    <div class="d-flex justify-content-between mb-5 pb-5">
+                    <div class="d-flex justify-content-between mb-lg-5 pb-5">
                         <div class="col-md-6">
                             <p>Using our research, we were able to identify the main problems in navigation and what our users expect while on the site. With the current design, most users feel overwhelmed by the sheer amount of information. After identifying our issues, we completed a <b>feature prioritization matrix</b>, grouping features into 4 categories of <b>Must Have, Could Have, Should Have,</b> and <b>Won&apos;t Have.</b></p>
                         </div>
@@ -274,7 +274,7 @@
                     </div>
 
                     <!-- Card Sorting -->
-                    <div class="col-lg-9 pt-5">
+                    <div class="col-lg-9 pt-lg-5">
                         <p>We also conducted <b>Card Sorting</b> activity with users to identify like-groups of content for users to navigate through.</p>
                     </div>
                     <img data-src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
@@ -292,7 +292,7 @@
                     <div class="pt-5">
                         <p>Using our card sorting results, we redesigned the new <b>sitemap navigation</b>. To simplify the homepage, we moved links to specific pages to the footer.</p>
                     </div>
-                    <div class="pb-5 mb-5">
+                    <div class="pb-lg-5 mb-lg-5">
                         <img data-src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
                     </div>
                     <div class="py-5">
@@ -325,7 +325,7 @@
                     </div>
 
                     <!-- 5 second user test -->
-                    <h6 class="playFair mb-5 pt-5">
+                    <h6 class="playFair mb-5 pt-lg-5">
                         After the first high-fidelity draft, we conducted 6x five-second usability tests.
                     </h6>
                     <div class="d-flex justify-content-between mb-5 pb-5 row">
@@ -369,10 +369,10 @@
                     </div>
 
                     <!-- Usability test -->
-                    <h6 class="playFair mb-5 pt-5">
+                    <h6 class="playFair mb-5 pt-lg-5">
                         We invited the testers back for more thorough testings after more revisions.
                     </h6>
-                    <p class="fw-bold mt-5 pt-3">List of tasks for users:</p>
+                    <p class="fw-bold mt-lg-5 pt-lg-3">List of tasks for users:</p>
                     <ol>
                         <li>What is your first impression of the homepage?</li>
                         <li>What are your thoughts about the navigation tools on the homepage?</li>
