--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -126,7 +126,7 @@
         <section class="" style="margin: 9.375rem 0 5rem 0;">
             <div class="container px-4 px-lg-5">
                 <!-- Overview -->
-                <div class="UXCaseTeam row gx-0 col-lg-10 mx-auto">
+                <div class="UXCaseTeam gx-0 col-lg-10 mx-auto">
                     <div class="text-center col-md-4">
                         <h5>Role</h5>
                         <p>Designer <br>
@@ -151,7 +151,7 @@
                 </div>
 
                 <!-- Title -->
-                <div class="UXCaseNav row gx-0 mb-5">
+                <div class="UXCaseNav gx-0 mb-5">
                     <a class="hvr-sweep" href="#VTP_Research">Research</a>
                     <a class="hvr-sweep" href="#VTP_Definition">Definition</a>
                     <a class="hvr-sweep" href="#VTP_Ideation">Ideation</a>
@@ -205,7 +205,7 @@
         <!-- Definition ##################-->
         <section id="VTP_Definition">
             <div class="container px-4 px-lg-5 d-flex">
-                <div class="row col-lg-10 mx-auto">
+                <div class="col-lg-10 mx-auto">
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Definition
                     </h6>
@@ -214,7 +214,7 @@
                     </h6>
                     <div class="d-flex">
                         <img data-src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
-                        <div class="col-md-7 align-self-center ms-0 ms-md-5">
+                        <div class="col-md-7 align-self-center">
                             <p class="">
                                 As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
                                 </br>
@@ -223,7 +223,7 @@
                             </br>
                         </div>
                     </div>
-                    <img data-src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5">
+                    <img data-src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-3 mt-lg-5 pt-lg-5 img-fluid">
                 </div>
             </div>
         </section>
