--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -168,7 +168,7 @@
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Research
                 </h6>
-                <h6 class="playFair mb-5">
+                <h6 class="playFair mb-3 mb-lg-4 pb-lg-3">
                     We started by creating a proto-persona to help us determine interview questions and our target audience.
                 </h6>
                 <div class="d-flex">
@@ -209,7 +209,7 @@
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Definition
                     </h6>
-                    <h6 class="playFair mb-5">
+                    <h6 class="playFair mb-3 mb-lg-4 pb-lg-3">
                         Using our research we were able to identify the main problems that teachers face.
                     </h6>
                     <div class="d-flex">
@@ -235,24 +235,15 @@
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Ideation
                     </h6>
-                    <h6 class="playFair mb-5 mb-5">
+                    <h6 class="playFair mb-3 mb-lg-4 pb-lg-3">
                         Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
                     </h6>
-                    <div class="">
-                        <div class="mb-5">
-                            <p class="">
-                                Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
-                                </br>
-                                </br>
-                                Our value proposition canvas allowed us to identify how those features would help users current pains with preparing lessons and what users would gain from using our app.                            
-                                </br>
-                                </br>
-                                We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.
-                            </p>
-                        </div>
-
-                        <img data-src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
+                    <div class="mb-lg-3">
+                        <p">Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.</p>
+                        <p>Our value proposition canvas allowed us to identify how those features would help users current pains with preparing lessons and what users would gain from using our app.</p>
+                        <p>We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.</p>
                     </div>
+                    <img data-src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -264,15 +255,14 @@
                     <h6 class="leadingLine text-nav text-muted mb-5">
                         Prototyping
                     </h6>
-                    <div class="">
-                        <div class="mb-5">
-                            We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
-                        </div>
-                        <div class="row justify-content-center">
-                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-3">
-                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-3">
-                            <img data-src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-3">
-                        </div>
+                    <div class="mb-lg-5">
+                        <p>We started first with a <b>mind map</b> to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it.</p>
+                        <p>We then created a Figma file that allowed us to <b>build out wireframs</b> of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.</p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <img data-src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-4">
+                        <img data-src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-4">
+                        <img data-src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-4">
                     </div>
                 </div>
             </div>
@@ -284,20 +274,14 @@
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Testing
                 </h6>
-                <h6 class="playFair mb-5">
+                <h6 class="playFair mb-3 mb-3 mb-lg-4">
                     Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
                 </h6>
                 <div class="d-flex">
                     <div class="col-md-6 align-self-center me-md-5">
-                        <p class="">
-                            We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
-                            </br>
-                            </br>
-                            The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.
-                            </br>
-                            </br>
-                            With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
-                        </p>
+                        <p>We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b></p>
+                        <p>The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.</p>
+                        <p>With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list.</p>
                     </div>
                     <img data-src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
                 </div>
@@ -313,19 +297,13 @@
                     </h6>
                     <div class="">
                         <div class="mb-5">
-                            <h6 class="playFair mb-5">
+                            <h6 class="playFair mb-3 mb-3 mb-lg-4">
                                 We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
                             </h6>
                             <div class="pb-5">
-                                <p>
-                                    With more iterations, this app would be constantly evolving to keep up with teacher needs.
-                                    </br>
-                                    </br>
-                                    For our next steps, we will create a hi-fi prototype with the ability to access cloud saved lessons by all teachers. We would also finish building out our calendar and the “My Classes” tab to show student information for each class.
-                                    </br>
-                                    </br>
-                                    <b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b>
-                                </p>
+                                <p>With more iterations, this app would be constantly evolving to keep up with teacher needs.</p>
+                                <p>For our next steps, we will create a hi-fi prototype with the ability to access cloud saved lessons by all teachers. We would also finish building out our calendar and the “My Classes” tab to show student information for each class.</p>
+                                <p><b>In the future, we would hope to be able to build out the sister apps of having a student version and school version of ULearn.</b></p>
                             </div>
                         </div>
                     </div>
