worked on collapse button on mobile.

--- a/About.html
+++ b/About.html
@@ -79,8 +79,8 @@
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="index.html#3Dassets">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="index.html#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="index.html#illustrations3D">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="index.html#illustrations2D">2D illustrations</a></li>
                                             <li><a class="dropdown-item" href="index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
@@ -106,18 +106,16 @@
         </header>
 
         <!-- Biography -->
-        <section class="">
-            <div class="container d-flex aboutMeIntro">
-                <div class="row col-md-10 mx-auto">
-                    <div class="col-md-5 mb-4">
-                        <h1>Hello!</h1>
-                        <h1>My name is <span style="font-weight: 600;">Leon</span></h1>
-                    </div>
-                    <div class="col-md-7 ps-3 pt-1">
-                        <h5 class="mb-4 fw-normal">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</h5>
-                        <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with an addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
-                        <h5 class="fw-normal">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</h5>
-                    </div>
+        <section class="container d-flex aboutMeIntro">
+            <div class="row col-md-10 mx-auto">
+                <div class="col-md-5 mb-4 slide-in from-left">
+                    <h1>Hello!</h1>
+                    <h1>My name is <span style="font-weight: 600;">Leon</span></h1>
+                </div>
+                <div class="col-md-7 ps-3 pt-1 slide-in from-right">
+                    <h5 class="mb-4 fw-normal">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</h5>
+                    <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with an addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
+                    <h5 class="fw-normal">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</h5>
                 </div>
             </div>
         </section>
@@ -125,7 +123,7 @@
         <!-- Experience -->
         <section class="container aboutMeXP">
             <div class="d-flex row col-md-10 mx-auto">
-                <div class="col-md-7">
+                <div class="col-md-7 fade-in">
                     <!-- Education -->
                     <h6 class="playFair mb-5">Education</h6>
                     <h5 class="lato pt-3">Full Sail University</h5>
@@ -138,9 +136,9 @@
                     <p class="lato pb-4">Training Certification</p>
 
                     <!-- Experience -->
-                    <h6 class="playFair my-5 pt-5">Experience</h6>
+                    <h6 class="playFair my-5 pt-5 fade-in">Experience</h6>
                     <h5 class="lato pt-3">Huntington Ingalls Industries</h5>
-                    <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
+                    <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
                     <h5 class="lato">Corys Thunder</h5>
                     <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Sep 2015 - Apr 2019</p>
                     <h5 class="lato">Delta V Engineering</h5>
@@ -149,66 +147,74 @@
 
                 <!-- Skills -->
                 <div class="col-md-5 ps-md-5 mt-5 mt-md-0 pt-5 pt-md-0">
-                    <h6 class="playFair mb-5">Skill</h6>
+                    <h6 class="playFair mb-5 fade-in">Skill</h6>
                     <!-- General -->
-                    <h5 class="lato py-3">General</h5>
-                    <div class="aboutMeTag lato">
-                        <p>UX/UI</p>
-                        <p>Product Design</p>
-                        <p>User Research</p>
-                        <p>Rapid Prototyping</p>
-                        <p>Storyboarding</p>
-                        <p>Wireframing</p>
-                        <p>Usability Testing</p>
-                        <p>Branding</p>
-                        <p>Video Editing</p>
-                        <p>Compositing</p>
-                        <p>Point Cloud</p>
+                    <div class="fade-in">
+                        <h5 class="lato py-3 fade-in">General</h5>
+                        <div class="aboutMeTag lato">
+                            <p>UX/UI</p>
+                            <p>Product Design</p>
+                            <p>User Research</p>
+                            <p>Rapid Prototyping</p>
+                            <p>Storyboarding</p>
+                            <p>Wireframing</p>
+                            <p>Usability Testing</p>
+                            <p>Branding</p>
+                            <p>Video Editing</p>
+                            <p>Compositing</p>
+                            <p>Point Cloud</p>
+                        </div>
                     </div>
 
                     <!-- Design -->
-                    <h5 class="lato pt-1 pb-3 mt-5">Design</h5>
-                    <div class="aboutMeTag lato">
-                        <p>Adobe Creative Suite</p>
-                        <p>Sketch</p>
-                        <p>Figma</p>
-                        <p>Invision</p>
-                        <p>Keynote</p>
-                        <p>Miro</p>
-                        <p>Foundry Nuke</p>
+                    <div class="fade-in">
+                        <h5 class="lato pt-1 pb-3 mt-5">Design</h5>
+                        <div class="aboutMeTag lato">
+                            <p>Adobe Creative Suite</p>
+                            <p>Sketch</p>
+                            <p>Figma</p>
+                            <p>Invision</p>
+                            <p>Keynote</p>
+                            <p>Miro</p>
+                            <p>Foundry Nuke</p>
+                        </div>
                     </div>
                     
                     <!-- 3D Animation -->
-                    <h5 class="lato pt-1 pb-3 mt-5">3D Animation</h5>
-                    <div class="aboutMeTag lato">
-                        <p>Maya</p>
-                        <p>3DS Max</p>
-                        <p>Zbrush</p>
-                        <p>Cinema 4D</p>
-                        <p>AutoCAD</p>
-                        <p>Solidworks</p>
-                        <p>Fusion 360</p>
-                        <p>Autodesk Recap</p>
-                        <p>Substance</p>
+                    <div class="fade-in">
+                        <h5 class="lato pt-1 pb-3 mt-5">3D Animation</h5>
+                        <div class="aboutMeTag lato">
+                            <p>Maya</p>
+                            <p>3DS Max</p>
+                            <p>Zbrush</p>
+                            <p>Cinema 4D</p>
+                            <p>AutoCAD</p>
+                            <p>Solidworks</p>
+                            <p>Fusion 360</p>
+                            <p>Autodesk Recap</p>
+                            <p>Substance</p>
+                        </div>
                     </div>
 
                     <!-- Engineering -->
-                    <h5 class="lato pt-1 pb-3 mt-5">Engineering</h5>
-                    <div class="aboutMeTag lato">
-                        <p>HTML/CSS</p>
-                        <p>JavaScript</p>
-                        <p>Python</p>
-                        <p>Mel</p>
-                        <p>Unreal Engine</p>
-                        <p>Cry Engine</p>
-                        <p>Unity</p>
-                        <p>Roblox</p>
+                    <div class="fade-in">
+                        <h5 class="lato pt-1 pb-3 mt-5">Engineering</h5>
+                        <div class="aboutMeTag lato">
+                            <p>HTML/CSS</p>
+                            <p>JavaScript</p>
+                            <p>Python</p>
+                            <p>Mel</p>
+                            <p>Unreal Engine</p>
+                            <p>Cry Engine</p>
+                            <p>Unity</p>
+                            <p>Roblox</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- End -->
-            <div class="aboutMeEnd row col-md-10 mx-auto">
+            <div class="aboutMeEnd row col-md-10 mx-auto fade-in">
                 <h5>Always down to collaborate when I have time.</h5>
                 <h5>Let's get in touch.</h5>
                 <div class="pt-4">
