--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -79,8 +79,8 @@
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#3Dassets">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations3D">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations2D">2D illustrations</a></li>
                                             <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
@@ -112,7 +112,7 @@
         </header>
 
         <!-- Page Scroller ########################################### -->
-        <div class="scrollerContainer d-none d-md-block">
+        <div class="scrollerContainer">
             <a href="#AFA_Overview" data-section="AFA_Overview" class="scrollerBtn"><p>Overview</p><span></span></a>
             <a href="#AFA_Research" data-section="AFA_Research" class="scrollerBtn"><p>Research</p><span></span></a>
             <a href="#AFA_Ideation" data-section="AFA_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
