--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -79,8 +79,8 @@
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#3Dassets">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations3D">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations2D">2D illustrations</a></li>
                                             <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
@@ -112,7 +112,7 @@
         </header>
 
         <!-- Navigation ###########################-->
-        <div class="scrollerContainer d-none d-md-block">
+        <div class="scrollerContainer">
             <a href="#CW_Research" data-section="CW_Research" class="scrollerBtn"><p>Research</p><span></span></a>
             <a href="#CW_Definition" data-section="CW_Definition" class="scrollerBtn"><p>Definition</p><span></span></a>
             <a href="#CW_Ideation" data-section="CW_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
@@ -328,11 +328,9 @@
     
                     <!-- Mobile collapse button -->
                     <div class="justify-content-center mx-auto d-block d-sm-none pt-2">
-                        <p>
-                            <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCW" aria-expanded="false" aria-controls="collapseCW">
-                              More details
-                            </button>
-                        </p>
+                        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCW" aria-expanded="false" aria-controls="collapseCW">
+                          More details
+                        </button>
                         <div class="collapse" id="collapseCW">
                             <ol class="card card-body gap-2">
                                 <li>Starts at Homepage</li>
