--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -79,8 +79,8 @@
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#3Dassets">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#2Dassets">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations3D">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#illustrations2D">2D illustrations</a></li>
                                             <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
@@ -115,7 +115,7 @@
         </header>
 
         <!-- Navigation ###########################-->
-        <div class="scrollerContainer d-none d-md-block">
+        <div class="scrollerContainer">
             <a href="#VTP_Research" data-section="VTP_Research" class="scrollerBtn"><p>Research</p><span></span></a>
             <a href="#VTP_Definition" data-section="VTP_Definition" class="scrollerBtn"><p>Definition</p><span></span></a>
             <a href="#VTP_Ideation" data-section="VTP_Ideation" class="scrollerBtn"><p>Ideation</p><span></span></a>
